--- a/argue-rust/Cargo.toml
+++ b/argue-rust/Cargo.toml
@@ -16,3 +16,4 @@ serde_json = "1.0.111"
 tower-http = { version = "0.4.4", features = ["cors", "fs"] }
 tracing = "0.1.37"
 tracing-subscriber = "0.3.16"
+dotenv = "0.15.0"
