--- a/argue-rust/Cargo.toml
+++ b/argue-rust/Cargo.toml
@@ -10,7 +10,7 @@ reqwest = { version = "0.11.23", default-features=false, features = ["json", "ru
 serde = { version = "1.0.194", features = ["derive"] }
 tokio = { version = "1.35.1", features = ["full"] }
 generational-arena = { version = "0.2.9", features = ["serde"] }
-axum = { version = "0.6.20", features = ["ws", "tracing", "macros"] }
+axum = { version = "0.6.20", features = ["ws", "macros"] }
 futures-util = "0.3.30"
 serde_json = "1.0.111"
 tower-http = { version = "0.4.4", features = ["cors", "fs"] }
