--- a/backend/argue.example.toml
+++ b/backend/argue.example.toml
@@ -1,14 +1,14 @@
 address = "0.0.0.0:8000"
-server_dir = "../frontend/dist"
+serve_dir = "../frontend/dist"
 
 [openai]
-enabled = false
+disabled = true
 endpoint = "https://api.openai.com/v1/chat/completions"
 token = ""
 rate_limit = 2
 
-[google-gemini]
-enabled = false
+[google_gemini]
+disabled = true
 endpoint = ""
 token = ""
 rate_limit = 60
